stylus/main.styl
/* ... */
        color: #FFF
      {HOVER}
        text-decoration: none

    h2, h3
      font-family: HERO_FONT
      text-shadow: 1px 1px 2px rgba(#000, 0.8)
      margin: 0.3em 0
    h2
      font-size: 50px
      font-weight: bold
      text-shadow: 2px 2px 3px rgba(#000, 0.8)
      body.home &
        font-size: 80px
    h3
      font-size: 25px
      body.home &
        font-size: 40px

  ul.tabs
    height: TAB_HEIGHT
    left: 0
    list-style: none
    padding-left: 20px
    position: absolute
    transition: 0.5s opacity linear
    top: HERO_HEIGHT - TAB_HEIGHT
    width: 100%
    z-index: 5

    li
      float: left
      margin-right: 6px
      padding: 0

      a
        {LINK}
          background: rgba(LIGHTEST_GRAY,0.9)
          border-bottom: none
          border-radius: 6px 6px 0 0
          box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.1)
          color: DARKER_GRAY
          display: block
          height: TAB_HEIGHT
          padding: 7px 10px 0 10px
          font-weight: bold

        {HOVER}
          background: rgba(LIGHTEST_GRAY,1)
          color: BLUE
          text-decoration: none

      &.on a
        {LINK}
          background: #FFF
          border-bottom: 1px solid #FFF
          box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.2)
          height: TAB_HEIGHT + 1


//
// CONTENT
//

SIDEBAR_WIDTH = 336px
SIDEBAR_MARGIN_LEFT = 30px
SIDEBAR_MARGIN_RIGHT = 40px
CONTENT_PADDING_TOP = 35px

.contentWrapper
  float: left
  margin-right: - (SIDEBAR_WIDTH + SIDEBAR_MARGIN_LEFT + SIDEBAR_MARGIN_RIGHT)
  margin-top: HEADER_HEIGHT
  position: relative
  width: 100%

  .isHero &
    margin-top: HERO_HEIGHT
  .isHero body.home &
    margin-top: HERO_HOME_HEIGHT


.content
  background: #FFF
  border: 1px solid rgba(0, 0, 0, .1)
  border-radius: 6px
  box-shadow: 0 0 10px 1px rgba(0, 0, 0, .05)
  position: relative
  margin-left: 10px
  margin-right: (SIDEBAR_WIDTH + SIDEBAR_MARGIN_LEFT + SIDEBAR_MARGIN_RIGHT)
  padding: CONTENT_PADDING_TOP 50px 50px 50px
  z-index: 10

  h1
    border-bottom: 1px solid LIGHTEST_GRAY
    margin: 10px 0 30px 0
    padding-bottom: 20px

    body.note &
      border-bottom: none
      margin-bottom: 0 // since toolbar will add the border

  h2:first-child
    margin-top: 10px

  ul:not(.listing)
    padding-left: 20px

  //
  // CONTENT TOOLBAR
  //
  .ghost
    height: 56px
    width: 100%

  .toolbar
    @extend .content .ghost
    background: #FFF
    border-top: 1px solid LIGHTEST_GRAY
    border-bottom: 1px solid LIGHTEST_GRAY
    z-index: 20

    &.sticky
      border-bottom: 1px solid LIGHTER_GRAY
      position: fixed
      top: 0

    .fb-like
      float: left
      margin-top: 15px

    a.next
      {LINK}
        background: BLUE
        border-radius: 3px
        color: #FFF
        float: right
        font-size: 19px
        font-weight: bold
        height: 35px
        line-height: 1.9em
        margin-top: 10px
        padding: 0 0 0 15px
        text-transform: uppercase
        width: 100px
      
      {HOVER}
        background: DARK_BLUE
        text-decoration: none


.breadcrumbs
  font-size: 16px
  font-weight: bold
  text-transform: uppercase

  .divider::before
    content: '/'
    // content: '\2192'
    font-weight: bold
    margin: 0 12px





//
// SIDEBAR
//

.sidebar
  float: left
  padding: 5px SIDEBAR_MARGIN_RIGHT 0 SIDEBAR_MARGIN_LEFT
  position: relative
  width: SIDEBAR_WIDTH + SIDEBAR_MARGIN_LEFT + SIDEBAR_MARGIN_RIGHT

  .isHero &
    margin-top: HERO_HEIGHT
  .isHero body.home &
    margin-top: HERO_HOME_HEIGHT

  & > div
    margin: 1.2em 0

  h1, h2, h3, h4
    font-family: BODY_FONT

  h3
    font-size: 19px
    font-weight: bold
    margin: 2em 0 1em 0

  //
  // COUNTDOWN
  // 

  .countdown
    margin-top: 2em

    .time
      float: left
      width: 25%

      div
        font-size: 35px
        line-height: 1.1em
        margin: 0
        text-align: center
      span
        display: block
        font-size: 13px
        margin: 0
        text-align: center

    h3
      text-align: center
      text-transform: uppercase

      &.left-to-study
        font-weight: normal
        margin-top: 1em

    // .date
    //   display: none

//
// AMAZON
//
.amazon
  background-color: rgba(0,0,0,0.05)
  padding: 0 15px 10px 15px

  h3
    margin-top: 1em
    padding-top: 1em

  h4
    font-weight: bold
    margin-bottom: 10px
  img
    float: left
    padding: 0 20px 0 0


//
// PAGE-SPECIFIC STYLES
//

body.about
  img
    float: right
    padding: 0 0 20px 20px
    width: 40%


//
// NOTE PAGE
// 

.keepStudying
  color: GRAY
  margin-top: 40px
  text-align: center

.noteNav
  .prev, .next
    display: inline-block
    ellipsis()
    font-weight: bold
    width: 45%      

  .prev
    float: left

    &:before
      content: '\25c0'
      float: left
      font-size: 12px
      padding-right: 10px

  .next
    float: right
    text-align: right

    &:before
      content: '\25b6'
      float: right
      font-size: 12px
      padding-left: 10px

.cite
  padding-left: 55px
  text-indent: -55px



//
// FOOTER
//

.footer
  clear: both
  font-size: 15px
  padding: 40px 20px 30px (LOGO_WIDTH / 2)
  position: relative
  width: 100%

  .randomquote
    color: LIGHT_GRAY
    font-size: 22px

    q
      font-style: italic
      quotes: none

      &::before
        content: '\201C'
        font-size: 30px
      &::after
        content: '\201D'
        font-size: 30px

    .author::before
      content: '\2013' // en dash
      padding: 0 4px

  .col
    margin-bottom: 40px
    width: 20%

    &.about-this-site
      width: 40%

  a
    {LINK}
      border-bottom: 1px solid LIGHTER_GRAY
      text-decoration: none
    {HOVER}
      border-bottom: 1px solid BLUE
      color: BLUE

  h4
    font-size: 18px
    font-weight: bold
    text-transform: uppercase

  ul
    list-style: none
    li
      padding: 5px 0

  small
    color: GRAY
    display: block
    margin: 5px 0

